调整请求生成

--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -29,14 +29,21 @@ function generate(config: GenerateConfig): Promise<string>;
 
 ```ts [GenerateConfig]
 type GenerateConfig = {
+  /**
+   * 请求生成的唯一标识符, 不设置则默认生成一个随机标识符.
+   *
+   * 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能用 `stopGenerationById` 停止特定生成请求, 或正确监听对应的生成事件.
+   */
+  generation_id?: string;
+
   /** 用户输入 */
   user_input?: string;
 
   /**
-   * 图片输入, 支持以下格式:
-   * - File 对象: 通过 input[type="file"] 获取的文件对象
-   * - Base64 字符串: 图片的 base64 编码
-   * - URL 字符串: 图片的在线地址
+   * 图片输入，支持以下格式：
+   * - File 对象：通过 input[type="file"] 获取的文件对象
+   * - Base64 字符串：图片的 base64 编码
+   * - URL 字符串：图片的在线地址
    */
   image?: File | string | (File | string)[];
 
@@ -66,13 +73,75 @@ type GenerateConfig = {
 
   /** 自定义API配置 */
   custom_api?: CustomApiConfig;
+};
+
+/**
+ * 预设为内置提示词设置的默认顺序
+ */
+declare const builtin_prompt_default_order: BuiltinPrompt[];
+
+type BuiltinPrompt =
+  | 'world_info_before'
+  | 'persona_description'
+  | 'char_description'
+  | 'char_personality'
+  | 'scenario'
+  | 'world_info_after'
+  | 'dialogue_examples'
+  | 'chat_history'
+  | 'user_input';
+
+type RolePrompt = {
+  role: 'system' | 'assistant' | 'user';
+  content: string;
+  image?: File | string | (File | string)[];
+};
+
+type Overrides = {
+  world_info_before?: string;
+  persona_description?: string;
+  char_description?: string;
+  char_personality?: string;
+  scenario?: string;
+  world_info_after?: string;
+  dialogue_examples?: string;
 
   /**
-   * 唯一id
-   *
-   * 可以并发生成, 并可以通过stopGenerateById停止特定生成, 不设置默认生成uuid, 在发送的事件中也会返回该id
+   * 聊天历史
+   * - `with_depth_entries`: 是否启用世界书中按深度插入的条目; 默认为 `true`
+   * - `author_note`: 若设置, 覆盖 "作者注释" 为给定的字符串
+   * - `prompts`: 若设置, 覆盖 "聊天历史" 为给定的提示词
    */
-  generation_id?: string;
+  chat_history?: {
+    with_depth_entries?: boolean;
+    author_note?: string;
+    prompts?: RolePrompt[];
+  };
+};
+
+/**
+ * 自定义API配置
+ */
+type CustomApiConfig = {
+  /** 自定义API地址 */
+  apiurl: string;
+  /** API密钥 */
+  key?: string;
+  /** 模型名称 */
+  model: string;
+  /** API源，默认为 'openai' */
+  source?: string;
+
+  /** 最大回复 tokens 度 */
+  max_tokens?: 'same_as_preset' | 'unset' | number;
+  /** 温度 */
+  temperature?: 'same_as_preset' | 'unset' | number;
+  /** 频率惩罚 */
+  frequency_penalty?: 'same_as_preset' | 'unset' | number;
+  /** 存在惩罚 */
+  presence_penalty?: 'same_as_preset' | 'unset' | number;
+  top_p?: 'same_as_preset' | 'unset' | number;
+  top_k?: 'same_as_preset' | 'unset' | number;
 };
 ```
 
@@ -83,7 +152,7 @@ type GenerateConfig = {
 #### `generation_id?`
 
 - **类型**: `string`
-- **描述**: 请求生成的唯一标识符, 不设置则默认生成一个随机标识符. 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能正确监听对应的生成事件.
+- **描述**: 请求生成的唯一标识符, 不设置则默认生成一个随机标识符. 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能用 `stopGenerationById` 停止特定生成请求, 或正确监听对应的生成事件.
 
 #### `user_input?`
 
@@ -183,42 +252,7 @@ function generateRaw(config: GenerateConfig): Promise<string>;
 ```
 
 ```ts [GenerateConfig]
-type GenerateRawConfig = {
-  /**
-   * 用户输入.
-   *
-   * 如果设置, 则无论 ordered_prompts 中是否有 'user_input' 都会加入该用户输入提示词; 默认加入在 'chat_history' 末尾.
-   */
-  user_input?: string;
-
-  /**
-   * 图片输入, 支持以下格式:
-   * - File 对象: 通过 input[type="file"] 获取的文件对象
-   * - Base64 字符串: 图片的 base64 编码
-   * - URL 字符串: 图片的在线地址
-   */
-  image?: File | string | (File | string)[];
-
-  /**
-   * 是否启用流式传输; 默认为 `false`.
-   *
-   * 若启用流式传输, 每次得到流式传输结果时, 函数将会发送事件:
-   * - `ifraem_events.STREAM_TOKEN_RECEIVED_FULLY`: 监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
-   * - `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`: 监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
-   *
-   * @example
-   * eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => console.info(text));
-   */
-  should_stream?: boolean;
-
-  /**
-   * 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词.
-   *   如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖提示词
-   */
-  overrides?: Overrides;
-
-  injects?: Omit<InjectionPrompt, 'id'>[];
-
+type GenerateRawConfig = GenerateConfig & {
   /**
    * 一个提示词数组, 数组元素将会按顺序发给 AI, 因而相当于自定义预设. 该数组允许存放两种类型:
    * - `BuiltinPrompt`: 内置提示词. 由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定要用哪些并给出顺序
@@ -226,19 +260,6 @@ type GenerateRawConfig = {
    * - `RolePrompt`: 要额外给定的提示词.
    */
   ordered_prompts?: (BuiltinPrompt | RolePrompt)[];
-
-  /** 最多使用多少条聊天历史; 默认为 'all' */
-  max_chat_history?: 'all' | number;
-
-  /** 自定义API配置 */
-  custom_api?: CustomApiConfig;
-
-  /**
-   * 唯一id
-   *
-   * 可以并发生成, 并可以通过stopGenerateById停止特定生成, 不设置默认生成uuid, 在发送的事件中也会返回该id
-   */
-  generation_id?: string;
 };
 ```
 
@@ -246,49 +267,9 @@ type GenerateRawConfig = {
 
 ### 参数
 
-#### `generation_id?`
+#### 与 `generate` 共用参数
 
-- **类型**: `string`
-- **描述**: 请求生成的唯一标识符, 不设置则默认生成一个随机标识符. 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能正确监听对应的生成事件.
-
-#### `user_input?`
-
-- **类型**: `string`
-- **描述**: 如果设置, 则无论 ordered_prompts 中是否有 `user_input` 都会加入该用户输入提示词; 默认加入在 `chat_history` 末尾
-
-#### `should_stream?`
-
-- **类型**: `boolean`
-- **描述**: 是否启用流式传输; 默认为 `false`
-
-#### `image?`
-
-- **类型**: `File|string[]`
-- **描述**: 图片输入, 支持以数组形式输入多张图片:
-
-  - `File` 对象: 通过 `input[type="file"]` 获取的文件对象
-  - `Base64` 字符串: 图片的 base64 编码
-  - `URL` 字符串: 图片的在线地址
-
-#### `custom_api?`
-
-- **类型**: `CustomApiConfig`
-- **描述**: 自定义 API 配置, 具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
-
-#### `overrides?`
-
-- **类型**: `Overrides`
-- **描述**: 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词. 如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述. 具体见[Overrides 参数详情](./请求生成#overrides-2)
-
-#### `injects?`
-
-- **类型**: `Omit<InjectionPrompt, 'id'>[]`
-- **描述**: 要额外注入的提示词, 具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
-
-#### `max_chat_history?`
-
-- **类型**: `'all'|number`
-- **描述**: 最多使用多少条聊天历史
+所有 `generate` 支持的参数, 在这里也能使用
 
 #### `ordered_prompts?`
 
@@ -296,6 +277,22 @@ type GenerateRawConfig = {
 - **描述**: 一个提示词数组, 数组元素将会按顺序发给 AI, 因而相当于自定义预设. 该数组允许存放两种类型:
   - [`BuiltinPrompt`](./请求生成#builtinprompt): 内置提示词. 由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定需要使用哪些并给出顺序. 如果不想自己指定, 函数会自行使用 `builtin_prompt_default_order` 中的酒馆默认预设顺序 (但对于这种情况, 你也许更应该用 [`generate`](./请求生成#generate))
   - [`RolePrompt`](./请求生成#roleprompt): 要额外给定的提示词
+
+#### `user_input` 与 `chat_history` 的关系
+
+在 [`generateRaw`](./请求生成#generateRaw)中, `user_input` 可以自由选择放置的位置了.
+
+关于 `user_input` 和 `chat_history` 的关系如下:
+
+当 `ordered_prompts` 中没有设置 `chat_history`:
+
+- 如果 `user_input` 未在 `ordered_prompts` 中: `user_input` 将自动添加到所有提示词的最后面
+- 如果 `user_input` 在 `ordered_prompts` 中: 以`user_input`在 `ordered_prompts` 中的位置为准
+
+当 `ordered_prompts` 中设置了 `chat_history`:
+
+- 如果 `user_input` 未在 `ordered_prompts` 中: 将自动插入到最新一条聊天记录后
+- 如果 `user_input` 在 `ordered_prompts` 中: `user_input` 和 `chat_history` 会分别插入到 `ordered_prompts` 中指示的位置
 
 ### 返回值
 
@@ -371,160 +368,43 @@ const result = await generate({ user_input: '你好', should_stream: true });
 console.info('收到最终回复: ', result);
 ```
 
-## 参数详情
+## stopGenerationById
 
-### `Overrides`
+根据生成请求唯一标识符停止特定的生成请求.
 
-#### `world_info_before?`
+:::code-group
 
-- **类型**: `string`
-- **描述**: 世界书(角色定义前)
-
-#### `persona_description?`
-
-- **类型**: `string`
-- **描述**: 用户描述
-
-#### `char_description?`
-
-- **类型**: `string`
-- **描述**: 角色描述
-
-#### `char_personality?`
-
-- **类型**: `string`
-- **描述**: 角色性格
-
-#### `scenario?`
-
-- **类型**: `string`
-- **描述**: 场景
-
-#### `world_info_after?`
-
-- **类型**: `string`
-- **描述**: 世界书(角色定义后)
-
-#### `dialogue_examples?`
-
-- **类型**: `string`
-- **描述**: 对话示例
-
-#### `chat_history?`
-
-- **类型**: `{with_depth_entries?: boolean, author_note?: string; prompts?: RolePrompt[];}`
-- **描述**: 聊天历史, 其中
-  - `with_depth_entries`: 是否启用世界书中按深度插入的条目; 默认为 `true`
-  - `author_note`: 若设置, 覆盖 "作者注释" 为给定的字符串
-  - `prompts`: 若设置, 覆盖 "聊天历史" 为给定的提示词, 详见[RolePrompt 格式](./请求生成#roleprompt)
-
-### `RolePrompt`
-
-#### `role`
-
-- **类型**: `'system' | 'assistant' | 'user'`
-- **描述**: 角色
-
-#### `content`
-
-- **类型**: `string`
-- **描述**: 提示词内容
-
-### `BuiltinPrompt`
-
-不指定 `ordered_prompts` 时, 将使用以下默认顺序排列提示词:
-
-```ts
-const builtin_prompt_default_order: BuiltinPrompt[] = [
-  "world_info_before", // 世界书(角色定义前)
-  "persona_description", // 用户描述
-  "char_description", // 角色描述
-  "char_personality", // 角色性格
-  "scenario", // 场景
-  "world_info_after", // 世界书(角色定义后)
-  "dialogue_examples", // 对话示例
-  "chat_history", // 聊天历史 (含世界书中按深度插入的条目、作者注释)
-  "user_input", // 用户输入
-];
+```ts [stopGenerationById]
+function stopGenerationById(generationId: string): Promise<boolean>
 ```
 
-仅以下字符串可被 `generateRaw` 识别:
-
-```ts
-type BuiltinPrompt =
-  | "world_info_before" // 世界书(角色定义前)
-  | "persona_description" // 用户描述
-  | "char_description" // 角色描述
-  | "char_personality" // 角色性格
-  | "scenario" // 场景
-  | "world_info_after" // 世界书(角色定义后)
-  | "dialogue_examples" // 对话示例
-  | "chat_history" // 聊天历史 (含世界书中按深度插入的条目、作者注释)
-  | "user_input"; // 用户输入
-```
-
-**`user_input`与`chat_history`的关系:**
-
-在[`generateRaw`](./请求生成#generateRaw)中, `user_input`可以自由选择放置的位置了. 关于`user_input`和`chat_history`的关系如下:
-
-当`chat_history`不在`ordered_prompts`:
-
-- 如果`user_input`未在 `ordered_prompts` 中: 将自动添加到所有提示词的最后面
-- 如果`user_input`在 `ordered_prompts` 中: 以`user_input`在 `ordered_prompts` 中的位置为准
-
-当`chat_history`在`ordered_prompts`时:
-
-- 如果`user_input`未在 `ordered_prompts` 中: 将自动插入到最新一条聊天记录后
-- 如果`user_input`在 `ordered_prompts` 中: `user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
-
-### `CustomApiConfig`
-
-#### `apiurl?`
-
-- **类型**: `string`
-- **描述**: 自定义 API 地址
-
-#### `key?`
-
-- **类型**: `string`
-- **描述**: API 密钥
-
-#### `model`
-
-- **类型**: `string`
-- **描述**: 模型名称
-
-#### `source?`
-
-- **类型**: `string`
-- **描述**: API 源, 默认为 `'openai'`
-
-#### `max_tokens?`
-
-- **类型**: `'same_as_preset'|'unset'|number`
-- **描述**: 最大回复 tokens 度
-
-#### `temperature?`
-
-- **类型**: `'same_as_preset'|'unset'|number`
-- **描述**: 温度
-
-#### `frequency_penalty?`
-
-- **类型**: `'same_as_preset'|'unset'|number`
-- **描述**: 频率惩罚
-
-#### `presence_penalty?`
-
-- **类型**: `'same_as_preset'|'unset'|number`
-- **描述**: 存在惩罚
-
-#### `top_p?`
-
-- **类型**: `'same_as_preset'|'unset'|number`
-- **描述**: top_p
-
-:::warning
-`source` 参数用于指定 API 源, 目前支持的源请查看酒馆官方代码[`SillyTavern/src/constants.js`](https://github.com/SillyTavern/SillyTavern/blob/2e3dff73a127679f643e971801cd51173c2c34e7/src/constants.js#L164) (可点击跳转) 所列出的源.
-但由于是通过强制使用反代来做到自定义 API, 所以可能不支持在酒馆中未提供反向代理选项的聊天补全来源, 但主流的`openai`、`claude`、`makersuite`(gemini)、`deepseek`都支持.
 :::
+
+### 参数
+
+#### `generation_id`
+
+- **类型**: `string`
+- **描述**: 生成请求唯一标识符, 用于标识要停止的生成请求
+
+### 返回值
+
+- **类型**: `Promise<boolean>`
+- **描述**: 是否成功停止生成
+
+## stopAllGeneration
+
+停止所有正在进行的生成请求.
+
+:::code-group
+
+```ts [stopAllGeneration]
+function stopAllGeneration(): Promise<boolean>;
+```
+
+:::
+
+### 返回值
+
+- **类型**: `Promise<boolean>`
+- **描述**: 是否成功停止所有生成
