--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -17,6 +17,7 @@ order: 4
 :::
 
 <CustomTOC />
+
 ## generate
 
 使用 SillyTavern 当前启用的预设, 让 AI 生成一段文本
@@ -367,6 +368,38 @@ eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => {
 const result = await generate({ user_input: '你好', should_stream: true });
 console.info('收到最终回复: ', result);
 ```
+
+## getModelList
+
+获取模型列表
+
+:::code-group
+
+```ts [getModelList]
+function getModelList(custom_api: { apiurl: string; key?: string }): Promise<string[]>;
+```
+
+:::
+
+### 参数
+
+#### `apiurl`
+
+- **类型**: `string`
+- **描述**: 自定义 API 地址
+
+#### `key`
+
+- **类型**: `string`
+- **描述**: 自定义 API 密钥
+
+### 返回值
+
+- **模型列表**: `string[]`
+
+### 异常
+
+当获取模型失败时, 会抛出异常
 
 ## stopGenerationById
 
