--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -61,6 +61,17 @@ type GenerateConfig = {
   should_stream?: boolean;
 
   /**
+   * 是否静默生成; 默认为 `false`.
+   * - `false`: 酒馆页面的发送按钮将会变为停止按钮, 点击停止按钮会中断所有非静默生成请求
+   * - `true`: 不影响酒馆停止按钮状态, 点击停止按钮不会中断该生成
+   *
+   * 虽然静默生成不能通过停止按钮中断, 但可以在代码中使用以下方式停止生成:
+   * - 使用该生成请求的 `generation_id` 调用 `stopGenerationById`
+   * - 调用 `stopAllGeneration`
+   */
+  should_silence?: boolean;
+
+  /**
    * 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词.
    *   如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述.
    */
@@ -164,6 +175,11 @@ type CustomApiConfig = {
 
 - **类型**: `boolean`
 - **描述**: 是否启用流式传输; 默认为 `false`. 启用流式传输后, 可以接收到额外的事件, 通过参数获得传输过程的完整/增量文本. 具体见[函数的事件发送](./请求生成#函数的事件发送)
+
+#### `should_silence?`
+
+- **类型**: `boolean`
+- **描述**: 是否静默生成; 默认为 `false`. 静默生成不会影响酒馆停止按钮状态, 点击停止按钮不会中断该生成. 具体见[GenerateConfig 参数详情](./请求生成#generateconfig)
 
 #### `image?`
 
