角色卡函数

--- a/src/guide/功能详情/预设/获取预设.md
+++ b/src/guide/功能详情/预设/获取预设.md
@@ -53,7 +53,7 @@ function getLoadedPresetName(): string;
 :::code-group
 
 ```ts [getPreset]
-function getPreset(preset_name: LiteralUnion<'in_use', string>): Preset | null;
+function getPreset(preset_name: LiteralUnion<'in_use', string>): Preset;
 ```
 
 ```ts [Preset]
@@ -285,7 +285,7 @@ const default_preset: Preset = {
 
 ### 返回值
 
-- **预设内容**: [`Preset`](#getpreset) | `null`
+- **预设内容**: [`Preset`](#getpreset)
 
 ### 异常
 
