--- a/src/guide/功能详情/世界书/修改世界书.md
+++ b/src/guide/功能详情/世界书/修改世界书.md
@@ -78,7 +78,7 @@ function replaceWorldbook(
 
 ```ts [ReplaceWorldbookOptions]
 interface ReplaceWorldbookOptions {
-  render?: 'debounced' | 'immediate';
+  render?: 'debounced' | 'immediate' | 'none';
 }
 ```
 
@@ -100,8 +100,8 @@ interface ReplaceWorldbookOptions {
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 异常
 
@@ -168,8 +168,8 @@ type WorldbookUpdater =
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
@@ -229,8 +229,8 @@ function createWorldbookEntries(
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
@@ -279,8 +279,8 @@ function deleteWorldbookEntries(
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
