--- a/src/guide/功能详情/预设/修改预设.md
+++ b/src/guide/功能详情/预设/修改预设.md
@@ -73,7 +73,7 @@ function replacePreset(
 
 ```ts [ReplacePresetOptions]
 interface ReplacePresetOptions {
-  render?: 'debounced' | 'immediate';
+  render?: 'debounced' | 'immediate' | 'none';
 }
 ```
 
@@ -95,8 +95,8 @@ interface ReplacePresetOptions {
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 异常
 
@@ -177,8 +177,8 @@ type PresetUpdater = ((preset: Preset) => Preset) | ((preset: Preset) => Promise
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
@@ -260,8 +260,8 @@ function setPreset(
 
 一个可选的配置对象, 包含以下属性:
 
-- **`render`**: `debounced|immediate`
-  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
+- **`render`**: `debounced|immediate|none`
+  - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced)、立即渲染 (immediate) 还是不刷新前端显示 (none)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
