--- a/src/guide/功能详情/导入酒馆数据.md
+++ b/src/guide/功能详情/导入酒馆数据.md
@@ -1,5 +1,5 @@
 ---
-order: 9
+order: 2
 ---
 
 # 导入酒馆数据
@@ -14,7 +14,7 @@ order: 9
 
 ## importRawCharacter
 
-像酒馆界面里那样导入角色卡
+像酒馆界面里那样导入新角色卡/更新现有角色卡
 
 :::code-group
 
@@ -88,7 +88,7 @@ await importRawChat(聊天文件名, await response.text());
 
 ## importRawPreset
 
-像酒馆界面里那样导入预设
+像酒馆界面里那样导入新预设/更新现有预设
 
 :::code-group
 
@@ -123,7 +123,7 @@ await importRawPreset(预设名, await response.text());
 
 ## importRawWorldbook
 
-像酒馆界面里那样导入世界书
+像酒馆界面里那样导入新世界书/更新现有世界书
 
 :::code-group
 
@@ -158,7 +158,7 @@ await importRawWorldbook(世界书名, await response.text());
 
 ## importRawTavernRegex
 
-像酒馆界面里那样导入酒馆正则
+像酒馆界面里那样导入新酒馆正则/更新现有酒馆正则
 
 :::code-group
 
