--- a/src/guide/功能详情/角色卡/获取角色卡其他信息.md
+++ b/src/guide/功能详情/角色卡/获取角色卡其他信息.md
@@ -1,14 +1,16 @@
 ---
-order: 10
+order: 4
 ---
 
-# 获取角色卡信息
+# 获取角色卡其他信息
+
+**这是还没调整的旧函数, 可能接口并不怎么方便, 等后续重新做.**
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/character.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/raw_character.d.ts)
 
 <CustomTOC />
 
