--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -177,7 +177,7 @@ addOneMessage(mes: Record<string, any>, options?: {
 }): void;
 ```
 
-该函数的具体内容和 `builtin` 内的更多功能请参考[接口访问](/guide/功能详情/接口访问.md).
+该函数的具体内容和 `builtin` 内的更多功能请参考[访问酒馆接口或其他插件](/guide/功能详情/访问酒馆接口或其他插件.md).
 
 :::
 
@@ -187,4 +187,4 @@ addOneMessage(mes: Record<string, any>, options?: {
 - `builtin.reloadChatWithoutEvents`: 刷新当前聊天但不触发任何事件
 - `builtin.reloadAndRenderChatWithoutEvents`: 刷新当前聊天并触发 `CHARACTER_MESSAGE_RENDERED` 和 `USER_MESSAGE_RENDERED` 事件从而重新渲染前端界面
 
-具体请参考[接口访问](/guide/功能详情/接口访问.md).
+具体请参考[访问酒馆接口或其他插件](/guide/功能详情/访问酒馆接口或其他插件.md).
