--- a/src/guide/基本用法/开发其他插件时使用.md
+++ b/src/guide/基本用法/开发其他插件时使用.md
@@ -10,4 +10,4 @@ order: 8
 
 为了让软件能正确识别酒馆助手功能, 你需要下载、解压[@types.zip](https://gitlab.com/novi028/JS-Slash-Runner/-/raw/main/dist/@types.zip?ref_type=heads&inline=false), 并在 `tsconfig.json` 的 `include` 部分添加它.
 
-更多内容请参考[接口访问](/guide/功能详情/接口访问.md#tavernhelper).
+更多内容请参考[访问酒馆接口或其他插件](/guide/功能详情/访问酒馆接口或其他插件.md#tavernhelper).
