--- a/src/guide/功能详情/触发快速回复命令.md
+++ b/src/guide/功能详情/触发快速回复命令.md
@@ -90,4 +90,4 @@ function executeSlashCommandsWithOptions(command: string, options?: any): Promis
 
 :::
 
-具体内容请参考[接口访问](/guide/功能详情/接口访问.md).
+具体内容请参考[访问酒馆接口或其他插件](/guide/功能详情/访问酒馆接口或其他插件.md).
