调整 character 文档

--- a/src/guide/功能详情/角色卡/获取角色卡其他信息.md
+++ b/src/guide/功能详情/角色卡/获取角色卡其他信息.md
@@ -21,7 +21,7 @@ order: 5
 :::code-group
 
 ```ts [getCharData]
-function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<v1CharData | null>;
+function getCharData(name: LiteralUnion<'current' | string>): Promise<v1CharData | null>;
 ```
 
 ```ts [v1CharData]
@@ -165,11 +165,6 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
 - **类型**: `string`
 - **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
 
-#### `allowAvatar?`
-
-- **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
-
 ### 返回值
 
 - **角色卡数据**: [`v1CharData | null`](#getcharcarddata) - 包含角色卡信息的对象, 找不到角色卡时返回 `null`
@@ -188,11 +183,6 @@ const charData = await getCharData("少女歌剧");
 console.log(charData);
 ```
 
-```ts[知晓准确头像文件名并用于查找]
-const charDataWithAvatar = await getCharData("少女歌剧2.png", true);
-console.log(charDataWithAvatar);
-```
-
 :::
 
 ## getCharAvatarPath
@@ -200,7 +190,7 @@ console.log(charDataWithAvatar);
 获取角色头像的URL路径
 
 ```ts
-function getCharAvatarPath(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<string | null>;
+function getCharAvatarPath(name: LiteralUnion<'current' | string>): Promise<string | null>;
 ```
 
 ### 参数
@@ -209,11 +199,6 @@ function getCharAvatarPath(name: LiteralUnion<'current' | string>, allowAvatar: 
 
 - **类型**: `string`
 - **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
-
-#### `allowAvatar?`
-
-- **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
 
 ### 返回值
 
@@ -233,7 +218,7 @@ console.log(avatarPath);
 :::code-group
 
 ```ts [getChatHistoryBrief]
-function getChatHistoryBrief(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<ChatHistoryBrief[] | null>;
+function getChatHistoryBrief(name: LiteralUnion<'current' | string>): Promise<ChatHistoryBrief[] | null>;
 ```
 
 ```ts [ChatHistoryBrief]
@@ -254,11 +239,6 @@ interface ChatHistoryBrief{
 
 - **类型**: `string`
 - **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
-
-#### `allowAvatar?`
-
-- **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
 
 ### 返回值
 
