更新新的界面截图和部分内容修改

--- a/src/guide/关于酒馆助手/安装与更新.md
+++ b/src/guide/关于酒馆助手/安装与更新.md
@@ -70,9 +70,17 @@ order: 0
 
 ### 扩展自带的更新按钮
 
-点击 "扩展界面-主设置" 中的 "更新" 按钮即可更新
+#### 有新版本时
+
+检测到新版本时, 在扩展界面上会出现提示新版本的横幅, 点击更新即可.
 
 <img src="/扩展内更新.png" width="50%" alt="扩展内更新">
+
+#### 无新版本时
+
+无新版本时, 点击右上角的扩展信息按钮, 在弹出的窗口中点击"查看日志"可以手动更新.
+
+<img src="/查看更新日志.png" width="50%" alt="查看更新日志">
 
 ### SillyTavern 内更新
 
