--- a/src/guide/基本用法/渲染器.md
+++ b/src/guide/基本用法/渲染器.md
@@ -12,11 +12,9 @@ order: 1
 
 :::
 
-### 快速切换渲染器的开启和关闭
+### 渲染深度
 
-快捷按钮位于输入框左方的魔术棒图标菜单中, 你可以快速切换渲染器的开启和关闭.
-
-![渲染快速切换开关](/渲染快速切换开关.png)
+渲染深度决定了渲染器会渲染多少楼层的消息, 从最新楼层开始计数. 为 0 时, 将渲染所有楼层.
 
 ### 启用代码折叠
 
@@ -25,6 +23,10 @@ order: 1
 ### 启用 Blob URL 渲染
 
 以 Blob URL 方式渲染前端界面, 将不会在控制台中重复显示大段代码, 方便调试. 但部分浏览器不支持 Blob URL, 当渲染异常时请关闭此选项.
+
+### 取消前端代码高亮
+
+由于酒馆的代码高亮机制会消耗大量性能, 造成卡顿, 取消前端代码高亮可以提升聊天加载速度. 此处只取消会渲染成界面的代码块的高亮, 不影响纯文字状态栏等普通代码块的高亮.
 
 ## 创作一张前端角色卡
 
