--- a/src/guide/基本用法/酒馆体验优化.md
+++ b/src/guide/基本用法/酒馆体验优化.md
@@ -4,10 +4,87 @@ order: 7
 
 # 酒馆体验优化
 
-- 自动启用/禁用了一些游玩社区预设、角色卡必然需要设置的选项
-- `角色卡面板-更多...-替换/更新`角色卡按钮将会自动导入最新世界书 (原生酒馆只会更新角色卡, 不会更新世界书)
-- `角色卡面板-导出角色卡`时必然会导出最新世界书 (原生酒馆可能导出陈旧世界书)
-- `要加载 # 条消息`将会保证网页只显示 `#` 个楼层, 从而让游玩酒馆更流畅: 如果设置`要加载 # 条消息`为 5, 则页面将最多显示 5 个楼层.
-  - 当发送新消息或收到新回复时, 旧楼层将会被自动取消渲染: 显示的楼层从 `4,5,6,7,8` 变成 `5,6,7,8,9`
-  - 当删除楼层时, 旧楼层将自动补全出来: 显示的楼层从 `5,6,7,8,9` 变成 `4,5,6,7,8`
-- `要加载 # 条消息`可以设置为任意非负数: 原本酒馆只允许`要加载 # 条消息`设置为 5 的倍数, 现在你可以设置为任意非负数, 如设置为 `1` 来只显示聊天中最近的 1 楼消息, 从而让游玩酒馆更流畅.
+优化选项卡提供了一系列优化选项, 可以让你在游玩酒馆时获得更好的体验.
+
+<img src="/酒馆体验优化.png" alt="酒馆体验优化" style="width: 100%;">
+
+## 性能优化
+
+### [要加载 # 条消息] → [要渲染 # 条消息]
+
+优化`酒馆上方人头👤-要加载 # 条消息`的作用: 原本它只是限制加载聊天时显示的楼层数量, 而现在, 它还会限制游玩酒馆过程中最多显示的楼层数量.
+
+例如, 如果设置要`加载 # 条消息`为 5, 则页面将最多显示 5 个楼层.
+
+ - 当发送新消息或收到新回复时, 旧楼层将会被自动取消渲染: 显示的楼层从`4,5,6,7,8` 变成 `5,6,7,8,9`
+ - 当删除楼层时, 旧楼层将自动补全出来: 显示的楼层从 `5,6,7,8,9` 变成 `4,5,6,7,8`
+
+这样一来, 在游玩过程中酒馆始终只会渲染几个楼层, 因而游玩酒馆会更加流畅.
+
+此外, 原本酒馆只允许要`加载 # 条消息`设置为 5 的倍数, 现在你可以设置为任意非负数, 如设置为 1 来只显示聊天中最近的 1 楼消息.
+
+## 角色卡优化
+
+### 使用[替换/更新角色卡]功能时更新世界书
+
+酒馆的角色卡面板中有`更多... → 替换/更新角色卡`功能.
+
+但使用这个功能更新角色卡时, 原生酒馆只会更新角色卡面板上的信息 (角色头像、角色描述、第一条消息等), 不会更新之前已经导入的世界书数据.
+
+本优化就是为了修正这一点: 开启这个选项后, `替换/更新角色卡`将会同时更新角色卡绑定的世界书.
+
+### 导出角色卡时始终携带最新世界书
+
+原生酒馆导出角色卡时, 可能导出陈旧的世界书: 在修改世界书条目后立即导出角色卡, 角色卡文件中很可能包含的是修改前的世界书数据.
+
+本优化就是为了修正这一点: 开启这个选项后, 导出角色卡时必然携带最新世界书.
+
+## 世界书优化
+
+### 强制使用推荐的世界书全局设置
+
+具体地, 推荐的全局设置如下:
+
+- 扫描深度: 2
+- 上下文百分比: 100
+- Token 预算上限: 0
+- 最小激活数: 0
+- 最大深度: 0
+- 最大递归深度: 0
+- 插入策略: 角色世界书优先
+- 包括名称: false
+- 递归扫描: true
+- 区分大小写: false
+- 匹配整个单词: false
+- 使用群组评分: false
+- 溢出警报: false
+
+现在角色卡作者默认均会用这样的全局设置, 本来就没有你去修改的必要.
+
+然而, 有的旧世界书会需要 "禁止递归扫描". 这时请去内置库中使用 "一键禁用条目递归" 脚本, 对它进行处理.
+
+## 预设优化
+
+### 最大化预设上下文长度
+
+启用后, 预设面板的`上下文长度 (以词符数计)` 将会被锁定成最大 (200w), 从而避免酒馆错误地截断本来可以完整发给 AI 的提示词.
+
+`上下文长度 (以词符数计)`只是酒馆对提示词最大 token 数施加的限制: 在把提示词发送给 AI 前, 酒馆会先检查提示词长度是否超过这个限制; 如果超过则只截取部分提示词发给 AI.
+
+但酒馆本就无法精确计算提示词 token 数, 再加上一些插件会对提示词进行处理 (例如酒馆助手宏会被替换, 提示词模板只有 `if` 成立的提示词才会真的发送……), 酒馆所计算出的 token 数往往比实际 token 数高出非常多.
+
+因此, 预设上下文长度太低只会让酒馆错误地截断本来可以完整发给 AI 的提示词, 将它锁定成最大值可以避免这种情况, 并且不会对游玩产生负面影响.
+
+
+## 杂项
+
+### 禁用不兼容选项
+
+强制禁用/启用酒馆中某些设置, 正常游玩酒馆时不可能需要调整这些设置:
+
+- 自动修复生成的 Markdown → 关
+- 修剪不完整的句子 → 关
+- 禁止外部媒体 → 关
+- 在响应中显示标签 → 关
+- 在机器人消息中允许{{char}} → 开
+- 在机器人消息中允许{{user}} → 开
