--- a/src/guide/功能详情/角色卡/获取角色卡.md
+++ b/src/guide/功能详情/角色卡/获取角色卡.md
@@ -24,6 +24,16 @@ function getCharacterNames(): string[];
 
 - **角色卡名称列表**: `string[]`
 
+## getCurrentCharacterName
+
+```ts
+function getCurrentCharacterName(): string | null;
+```
+
+### 返回值
+
+- **角色卡名称**: `string|null`; 如果当前没有角色卡, 则返回 `null`
+
 ## getCharacter
 
 获取 `character_name` 角色卡的内容
