--- a/src/guide/功能详情/酒馆正则.md
+++ b/src/guide/功能详情/酒馆正则.md
@@ -149,6 +149,7 @@ type TavernRegex = {
   scope: "global" | "character";
 
   find_regex: string;
+  trim_strings: string[];
   replace_string: string;
 
   source: {
