--- a/src/guide/关于酒馆助手/安装与更新.md
+++ b/src/guide/关于酒馆助手/安装与更新.md
@@ -16,8 +16,8 @@ order: 0
 
 点击 SillyTavern 顶部的扩展图标, 选择安装扩展, 在弹出框内**二选一**任选一个链接填入:
 
-- <https://gitlab.com/novi028/JS-Slash-Runner> (推荐, 不需要国外网络环境)
-- <https://github.com/n0vi028/JS-Slash-Runner> (需要国外网络环境)
+- <https://github.com/n0vi028/JS-Slash-Runner> (推荐, 需要开梯子)
+- <https://gitlab.com/novi028/JS-Slash-Runner>
 
 然后点击保存即可.
 
