feat: updateScriptButtonsWith + getScriptName

--- a/src/guide/功能详情/脚本额外功能.md
+++ b/src/guide/功能详情/脚本额外功能.md
@@ -123,6 +123,42 @@ eventOnButton("前往地点", () => {
 });
 ```
 
+## updateScriptButtonsWith <Badge type="warning" text="🚫TavernHelper" />
+
+用 `updater` 函数更新脚本按钮列表, **只能在脚本中使用**
+
+:::code-group
+
+```ts [updateScriptButtonsWith]
+declare function updateScriptButtonsWith(updater: (buttons: ScriptButton[]) => ScriptButton[]): ScriptButton[];
+
+declare function updateScriptButtonsWith(
+  updater: (buttons: ScriptButton[]) => Promise<ScriptButton[]>,
+): Promise<ScriptButton[]>;
+```
+
+:::
+
+### 参数
+
+#### `updater`
+
+用于更新脚本按钮列表的函数. 它应该接收脚本按钮列表作为参数, 并返回更新后的脚本按钮列表
+
+### 返回值
+
+- **更新后的脚本按钮列表**
+
+### 示例
+
+:::code-group
+
+```ts [新增一个按钮到末尾]
+updateVariablesWith(buttons => [...buttons, { name: '新按钮', visible: true }]);
+```
+
+:::
+
 ## appendInexistentScriptButtons <Badge type="warning" text="🚫TavernHelper" />
 
 为脚本按钮列表末尾添加不存在的按钮, 不会重复添加同名按钮, **只能在脚本中使用**.
@@ -147,6 +183,19 @@ function appendInexistentScriptButtons(buttons: ScriptButton[]): void;
 ```ts [新增 "重新开始" 按钮]
 appendInexistentScriptButtons([{name: '重新开始', visible: true}]);
 ```
+
+## getScriptName <Badge type="warning" text="🚫TavernHelper" />
+
+获取脚本名称
+
+```ts
+function getScriptName(): string;
+```
+
+### 返回值
+
+- **类型**: `string`
+- **描述**: 脚本名称
 
 ## getScriptInfo <Badge type="warning" text="🚫TavernHelper" />
 
